--- a/package.json
+++ b/package.json
@@ -316,6 +316,7 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "cricodecs": "^1.0.1",
     "csv-parse": "^5.5.5",
     "csv-parser": "^2.3.5",
     "follow-redirects": "^1.15.6",
