--- a/package.json
+++ b/package.json
@@ -311,6 +311,7 @@
     "@typescript-eslint/parser": "^8.14.0",
     "@vscode/vsce": "^3.2.1",
     "esbuild": "^0.24.0",
+    "esbuild-plugin-copy": "^2.1.1",
     "eslint": "^9.15.0",
     "npm-run-all": "^4.1.5",
     "typescript": "^5.6.3"
