--- a/package.json
+++ b/package.json
@@ -289,8 +289,8 @@
         },
         "zokuzoku.decryption.enabled": {
           "type": "boolean",
-          "default": false,
-          "description": "Enable decryption for encrypted 'meta' database and asset bundles. Requires a custom build of Python with apsw-sqlite3mc."
+          "default": true,
+          "description": "Enable decryption for encrypted 'meta' database and asset bundles."
         },
         "zokuzoku.decryption.metaKey": {
           "type": "string",
