--- a/webviews/package.json
+++ b/webviews/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@vscode/codicons": "^0.0.35",
+    "@vscode/l10n": "^0.0.18",
     "hachimi_lib": "github:Hachimi-Hachimi/hachimi_lib_js#823f1f018d3791d45a0d77cbc64acc3d1f35baf8",
     "svelte-intersection-observer": "^1.0.0"
   }
