--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,6 @@
         "a11y-click-events-have-key-events": "ignore",
         "a11y-missing-attribute": "ignore",
         "a11y-missing-content": "ignore"
-    }
+    },
+    "zokuzoku.enabled": true
 }
