Feat: Display TLed Chara name in panel and editer Setting Option

--- a/package.json
+++ b/package.json
@@ -298,6 +298,11 @@
           "default": "",
           "description": "%config.decryptionMetakey.description%",
           "format": "password"
+        },
+        "zokuzoku.showTranslatedCharacterNames": {
+          "type": "boolean",
+          "default": true,
+          "description": "%config.showTranslatedCharacterNames.description%"
         }
       }
     }
