--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,14 +1,25 @@
 .vscode/**
 .vscode-test/**
+.history/**
 src/**
-.gitignore
-.yarnrc
+webviews/**
+!webviews/dist/**
+!webviews/dist/**/*.{js,css,html,png,svg,ico,ttf,woff2}
+externals/**
+scripts/**
+docs/**
+!.gitignore
+.npmrc
+pnpm-lock.yaml
+pnpm-workspace.yaml
+tsconfig.json
+eslint.config.mjs
+build.mjs
 vsc-extension-quickstart.md
-**/tsconfig.json
-**/.eslintrc.json
 **/*.map
 **/*.ts
-**/.vscode-test.*
-webviews/**
-!webviews/dist/**/*.{js,css}
-externals/**
+**/*.svelte
+**/.DS_Store
+**/*.vsix
+node-pre-gyp.js
+**/.env*
