--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,40 @@
-out
-dist
-node_modules
-.vscode-test/
+# Build artifacts
+out/
+dist/
 *.vsix
-npminstall-debug.log
+*.vsixmanifest
+
+# Dependencies
+node_modules/
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor specific
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# OS specific
+.DS_Store
+Thumbs.db
+
+# Test
+.vscode-test/
+
+# Local configuration
+.env
+.env.local
+.env.*.local
