--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,8 @@
 {
-    // See http://go.microsoft.com/fwlink/?LinkId=827846
-    // for the documentation about the extensions.json format
     "recommendations": [
         "dbaeumer.vscode-eslint",
+        "svelte.svelte-vscode",
+        "esbenp.prettier-vscode",
         "ms-vscode.extension-test-runner"
     ]
 }
