--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,20 +1,34 @@
-// See https://go.microsoft.com/fwlink/?LinkId=733558
-// for the documentation about the tasks.json format
 {
     "version": "2.0.0",
     "tasks": [
         {
-            "type": "npm",
-            "script": "watch",
-            "problemMatcher": "$tsc-watch",
+            "label": "watch",
+            "type": "shell",
+            "command": "pnpm watch",
             "isBackground": true,
-            "presentation": {
-                "reveal": "never"
-            },
+            "problemMatcher": "$tsc-watch",
             "group": {
                 "kind": "build",
                 "isDefault": true
+            },
+            "presentation": {
+                "reveal": "never",
+                "panel": "dedicated"
             }
+        },
+        {
+            "label": "compile",
+            "type": "shell",
+            "command": "pnpm run compile",
+            "problemMatcher": "$tsc",
+            "group": "build"
+        },
+        {
+            "label": "lint",
+            "type": "shell",
+            "command": "pnpm run lint",
+            "problemMatcher": "$eslint-stylish",
+            "group": "build"
         }
     ]
 }
