--- a/webviews/.gitignore
+++ b/webviews/.gitignore
@@ -1,24 +1,30 @@
+# Build artifacts
+dist/
+dist-ssr/
+*.local
+
+# Dependencies
+node_modules/
+
 # Logs
-logs
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
+# Editor specific
 .vscode/*
 !.vscode/extensions.json
-.idea
-.DS_Store
+.idea/
+.history/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# OS specific
+.DS_Store
+Thumbs.db
