--- a/webviews/package.json
+++ b/webviews/package.json
@@ -3,23 +3,26 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=22"
+  },
   "scripts": {
     "build": "node build.mjs",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^3.0.2",
+    "@sveltejs/vite-plugin-svelte": "^3.1.2",
     "@tsconfig/svelte": "^5.0.2",
     "@types/vscode-webview": "^1.57.5",
     "rollup": "^4.24.3",
-    "svelte": "^4.2.19",
-    "svelte-check": "^3.6.7",
+    "svelte": "^4.2.20",
+    "svelte-check": "^4.1.4",
     "tslib": "^2.8.1",
-    "typescript": "^5.6.3",
+    "typescript": "^5.7.3",
     "vite": "^5.4.11"
   },
   "dependencies": {
-    "@vscode/codicons": "^0.0.35",
+    "@vscode/codicons": "^0.0.44",
     "@vscode/l10n": "^0.0.18",
     "hachimi_lib": "github:Hachimi-Hachimi/hachimi_lib_js#823f1f018d3791d45a0d77cbc64acc3d1f35baf8",
     "svelte-intersection-observer": "^1.0.0"
